--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,18 +16,29 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+@layer base {
+  @font-face {
+    font-family: 'SF Pro Display';
+    src: url('/fonts/SF-PRO-DISPLAY/SFPRODISPLAYMEDIUM.otf') format('opentype');
+    font-weight: normal;
+    font-display: swap;
+  }
+  @font-face {
+    font-family: 'SF Pro Display';
+    src: url('/fonts/SF-PRO-DISPLAY/SFPRODISPLAYBOLD.otf') format('opentype');
+    font-weight: bold;
+    font-display: swap;
+  }
+  @font-face {
+    font-family: 'SF Pro Display';
+    src: url('/fonts/SF-PRO-DISPLAY/SFPRODISPLAYREGULAR.otf') format('opentype');
+    font-weight: lighter;
+    font-display: swap;
   }
 }
